--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutterfire_ui: ^0.4.3+20
   google_sign_in: ^5.4.4
   carousel_slider: ^5.0.0
+  image_picker: ^1.0.8
 
 dev_dependencies:
   flutter_test:
