--- a/android/build.gradle
+++ b/android/build.gradle
@@ -10,6 +10,25 @@ buildscript {
     }
 }
 
+plugins {
+    id 'java'
+    id 'groovy'
+}
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_11 // or JavaVersion.VERSION_17 depending on your Groovy version
+    targetCompatibility = JavaVersion.VERSION_11 // or JavaVersion.VERSION_17 depending on your Groovy version
+}
+
+repositories {
+    google()
+    mavenCentral()
+}
+
+dependencies {
+    implementation 'org.codehaus.groovy:groovy-all:3.0.9'
+}
+
 allprojects {
     repositories {
         google()
@@ -25,6 +44,8 @@ subprojects {
     project.evaluationDependsOn(':app')
 }
 
-tasks.register("clean", Delete) {
-    delete rootProject.buildDir
+if (!tasks.findByName("clean")) {
+    tasks.register("clean", Delete) {
+        delete rootProject.buildDir
+    }
 }
