--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,14 +37,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.1.6
   http: ^1.2.0
-  firebase_storage: ^11.6.9
-  cloud_firestore: ^4.15.8
-  firebase_core: ^2.27.0
-  firebase_auth: ^4.17.8
-  flutterfire_ui: ^0.4.3+20
-  google_sign_in: ^5.4.4
+  intl: ^0.18.0
   carousel_slider: ^5.0.0
   image_picker: ^1.0.8
+  shared_preferences: ^2.2.3
+  rxdart: ^0.28.0
 
 dev_dependencies:
   flutter_test:
