--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   image_picker: ^1.0.8
   shared_preferences: ^2.2.3
   rxdart: ^0.28.0
+  flutter_stripe: ^9.6.0
 
 dev_dependencies:
   flutter_test:
