--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   shared_preferences: ^2.2.3
   rxdart: ^0.28.0
   youtube_player_flutter: ^8.0.0
+  barcode_widget: ^2.0.4
 
 dev_dependencies:
   flutter_test:
